fix footer overlapping

--- a/students/aislyn/stylish/css/style.css
+++ b/students/aislyn/stylish/css/style.css
@@ -429,7 +429,7 @@ html {
   }
 
   .main-footer a {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
